version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/Mechanical/Selection/GeometryRayCastSettings.rst.txt
.. vale off



:class:`GeometryRayCastSettings`
================================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.Mechanical.Selection.GeometryRayCastSettings

   Bases: :py:obj:`object`



.. py:currentmodule:: GeometryRayCastSettings

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~CastLength`
            - Optional; specifies maximum axial distance from BoundVector origin.
          * - :py:attr:`~CastRadius`
            - Optional; specifies maximum radial distance from BoundVector.
          * - :py:attr:`~HitBodies`
            - Specifies whether ray casting should hit bodies.
          * - :py:attr:`~HitEdges`
            - Specifies whether ray casting should hit edges.
          * - :py:attr:`~HitFaces`
            - Specifies whether ray casting should hit faces.
          * - :py:attr:`~HitVertices`
            - Specifies whether ray casting should hit vertices.
          * - :py:attr:`~MaxHits`
            - Specifies maximum number of ray casting hits.







Property detail
---------------
.. py:property:: CastLength
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Optional; specifies maximum axial distance from BoundVector origin.
   Defaults to maximum needed length.
















   ..
       !! processed by numpydoc !!

.. py:property:: CastRadius
   :type: Optional[Ansys.Core.Units.Quantity]


   
   Optional; specifies maximum radial distance from BoundVector.
















   ..
       !! processed by numpydoc !!

.. py:property:: HitBodies
   :type: Optional[bool]


   
   Specifies whether ray casting should hit bodies. 
   Defaults to false.
















   ..
       !! processed by numpydoc !!

.. py:property:: HitEdges
   :type: Optional[bool]


   
   Specifies whether ray casting should hit edges. 
   Defaults to false.
















   ..
       !! processed by numpydoc !!

.. py:property:: HitFaces
   :type: Optional[bool]


   
   Specifies whether ray casting should hit faces. 
   Defaults to true.
















   ..
       !! processed by numpydoc !!

.. py:property:: HitVertices
   :type: Optional[bool]


   
   Specifies whether ray casting should hit vertices. 
   Defaults to false.
















   ..
       !! processed by numpydoc !!

.. py:property:: MaxHits
   :type: Optional[int]


   
   Specifies maximum number of ray casting hits. 
   Defaults to 1000.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on